<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/jersey_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        android:src="@drawable/red_jersey" />

    <Button
        android:id="@+id/jersey_display_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:text="@string/edit" />

    <TextView
        android:id="@+id/jersey_display_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_number"
        android:textColor="@color/white"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/jersey_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/jersey_display_number"
        android:layout_centerHorizontal="true"
        android:text="@string/start_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>